[tool.poetry]
name = "e2e-mte-0.6"
version = "0.1.0"
description = ""
authors = ["Jesse Wiles <jesse.wiles@boostinsurance.io>"]

[tool.poetry.dependencies]
python = "^3.10"
moment = "^0.12.1"
requests = "^2.27.1"
prodict = "^0.8.18"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
ipython = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
